--- a/.github/workflows/portability-testing.yml
+++ b/.github/workflows/portability-testing.yml
@@ -1,9 +1,14 @@
 name: Portability Testing
 
-on: [push, pull_request]
-  branches:    
-    - main
-    - master
+on: 
+  push:
+    branches:    
+      - main
+      - master
+  pull_request:
+    branches:    
+      - main
+      - master
 
 
 jobs:
